# ca-thumbsim

./: CMakeLists.txt  Makefile  README.md  decode.cpp  execute.cpp  myout.out  thumbsim_driver.cpp
